update user settings